--- a/index.html
+++ b/index.html
@@ -767,6 +767,19 @@
 				<input type="text" readonly value="" class="liga unitRight" />
 			</div>
 		</div>
+		<div class="glyph fs1">
+			<div class="clearfix bshadow0 pbs">
+				<span class="spacewalk-icon-bare-metal"></span><span class="mls"> spacewalk-icon-bare-metal</span>
+			</div>
+			<fieldset class="fs0 size1of1 clearfix">
+				<input type="text" readonly value="e623" class="unit size1of2" />
+				<input type="text" maxlength="1" readonly value="&#xe623;" class="unitRight size1of2 talign-right" />
+			</fieldset>
+			<div class="fs0 bshadow0 clearfix noLiga-true">
+				<span class="unit pvs fgc1">liga: </span>
+				<input type="text" readonly value="" class="liga unitRight" />
+			</div>
+		</div>
 	</div>
 
 	<!--[if gt IE 8]><!-->
